[gd_scene load_steps=9 format=2]

[ext_resource path="res://asset/ui/bg/bg.tscn" type="PackedScene" id=1]
[ext_resource path="res://asset/game/game.gd" type="Script" id=2]
[ext_resource path="res://asset/ui/hurt/hurt.tscn" type="PackedScene" id=3]
[ext_resource path="res://asset/game/pause.png" type="Texture" id=4]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=5]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=6]
[ext_resource path="res://asset/tank/tank.tscn" type="PackedScene" id=7]
[ext_resource path="res://asset/menu/play.png" type="Texture" id=8]

[node name="game" type="Node"]
script = ExtResource( 2 )

[node name="bg" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ui_panel" type="HBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/ui_panel"]
margin_right = 14.0
margin_bottom = 100.0
rect_min_size = Vector2( 14, 0 )

[node name="hp" type="Label" parent="CanvasLayer/ui_panel"]
margin_left = 18.0
margin_top = 30.0
margin_right = 112.0
margin_bottom = 70.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 6 )
text = "Hp : 5"

[node name="MarginContainer3" type="CenterContainer" parent="CanvasLayer/ui_panel"]
margin_left = 116.0
margin_right = 498.0
margin_bottom = 100.0
rect_min_size = Vector2( 14, 0 )
size_flags_horizontal = 3

[node name="score" type="Label" parent="CanvasLayer/ui_panel/MarginContainer3"]
margin_left = 95.0
margin_top = 24.0
margin_right = 286.0
margin_bottom = 76.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 5 )
text = "Score : 0"

[node name="pause" type="TextureButton" parent="CanvasLayer/ui_panel"]
margin_left = 502.0
margin_top = 10.0
margin_right = 582.0
margin_bottom = 90.0
rect_min_size = Vector2( 80, 80 )
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
expand = true

[node name="MarginContainer5" type="MarginContainer" parent="CanvasLayer/ui_panel"]
margin_left = 586.0
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 14, 0 )

[node name="game_over_panel" type="VBoxContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="title" type="Label" parent="CanvasLayer/game_over_panel"]
margin_top = 98.0
margin_right = 1024.0
margin_bottom = 150.0
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 5 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="try_again" type="Label" parent="CanvasLayer/game_over_panel"]
margin_top = 154.0
margin_right = 1024.0
margin_bottom = 194.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 6 )
text = "Play again?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/game_over_panel"]
margin_top = 198.0
margin_right = 1024.0
margin_bottom = 298.0
rect_min_size = Vector2( 0, 100 )

[node name="play_again" type="TextureButton" parent="CanvasLayer/game_over_panel"]
margin_left = 412.0
margin_top = 302.0
margin_right = 612.0
margin_bottom = 502.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 4
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hurt" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="spawn_point_1" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 141.0
rect_min_size = Vector2( 141, 0 )

[node name="spawn_point_2" type="Control" parent="CanvasLayer"]
anchor_bottom = 1.0
margin_right = 141.0
rect_min_size = Vector2( 141, 0 )
rect_scale = Vector2( -1, 1 )

[node name="YSort" type="YSort" parent="."]

[node name="tank" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 325, 528 )
color = Color( 0, 0.262745, 0.564706, 1 )

[node name="enemy_spawn_timer" type="Timer" parent="."]
autostart = true

[node name="enemy_action_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="pressed" from="CanvasLayer/ui_panel/pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="CanvasLayer/game_over_panel/play_again" to="." method="_on_play_again_pressed"]
[connection signal="destroy" from="YSort/tank" to="." method="_on_tank_destroy"]
[connection signal="hit" from="YSort/tank" to="." method="_on_tank_hit"]
[connection signal="timeout" from="enemy_spawn_timer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="enemy_action_timer" to="." method="_on_enemy_action_timer_timeout"]
